--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -128,6 +128,38 @@
             }                    
         }
         
+/*
+    width: 100%;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    margin-right: auto;
+    margin-left: auto; 
+
+    @include bp(mobile) {
+        max-width: 96%;
+    } 
+    
+    @include bp(tablet-s) {
+        max-width: 570px;
+    }   
+
+    @include bp(tablet) {
+        max-width: 720px;
+    }
+    
+    @include bp(desktop) {
+        max-width: 960px;
+    }
+    
+    @include bp(desktop-m) {
+        max-width: 1140px;
+    }        
+
+    @include bp(desktop-w2) {
+        max-width: 1320px;
+    } 
+*/        
+        
         .post-thumbnail {
             height: 400px;
             
